--- a/A/Aguadilla/Aguadilla.css
+++ b/A/Aguadilla/Aguadilla.css
@@ -14,9 +14,9 @@ body{
 }
 .Restaurantes{
   background-color: #a3bdb9;
-  text-align: left;
+  text-align: center;
 }
 .Eventos{
   background-color: #a3bdb9;
-  text-align: left;
+  text-align: center;
 }
